Update picture of me.html

--- a/picture of me.html
+++ b/picture of me.html
@@ -11,7 +11,7 @@
 <body>
     
     <div id="kishlogo2">
-        <a href="portfolio.html" cursor="pointer">
+        <a href="index.html" cursor="pointer">
             <img src="images1/kishininoue.fr_logo.png" height="70px" width="335px">
         </a></div>
 
