link to portfolio.html to index.html

--- a/conditions.html
+++ b/conditions.html
@@ -51,6 +51,6 @@
         Pour toute question, contacter l'auteur au kishin.inoue@ensaama.net. 
     </p></div>
 
-    <div style="margin-bottom: 70px; text-align: center;"><a href="portfolio.html">go back to portfolio</a></a>
+    <div style="margin-bottom: 70px; text-align: center;"><a href="index.html">go back to portfolio</a></a>
 </body>
 </html>
