link to portfolio.html to index.html

--- a/main page.html
+++ b/main page.html
@@ -38,7 +38,7 @@
 
     <div id="tocenter" class="container">
         <div class="image-container">
-            <a href="portfolio.html">
+            <a href="index.html">
             <img src="images1/nail1.png" alt="Front Image" class="front" title="my graphic design">
             <img src="images1/myportfoliotext.png" alt="Back Image" class="back">
             </a>
