DinopartouzeMono to Dinopartouze - Mono

--- a/index.html
+++ b/index.html
@@ -347,17 +347,17 @@
                         <hr><div class="sample-text" id="textKKKatalog">Je cherche un stage !</div>
                     </div>
 
-                    <div class="font-card" style="font-family: 'DinopartouzeMono';">
+                    <div class="font-card" style="font-family: 'Dinopartouze - Mono';">
                         <div class="font-name">Dinopartouze - Mono <span style="color:rgb(157, 157, 157);">/Overlay</span> <span style="color:rgb(98, 98, 98);">/Mono + Overlay</span></div>
                     <div><a href="to_download/Dinopartouze.zip" download>
                         <p class="downloadfont" style="color: black;"><u>download font & specimen</u></p>
                        </a></div>
                         <hr>
                         <div class="wrapper">
-                        <div class="sample-text" id="textDinopartouze" style="font-family: 'DinopartouzeMono';">Je cherche un stage !</div>
+                        <div class="sample-text" id="textDinopartouze" style="font-family: 'Dinopartouze - Mono';">Je cherche un stage !</div>
                         <div class="sample-text" id="textDinopartouzeoverlay" style="font-family: 'Dinopartouze - Overlay'">Je cherche un stage !</div>
                         <div id="sheenabox">
-                        <div class="sample-text" id="textDinopartouzes" style="font-family: 'DinopartouzeMono'">Je cherche un stage !</div>
+                        <div class="sample-text" id="textDinopartouzes" style="font-family: 'Dinopartouze - Mono'">Je cherche un stage !</div>
                         <div class="sample-text" id="textDinopartouzeoverlay2" style="font-family: 'Dinopartouze - Overlay'">Je cherche un stage !</div>
                         </div>
                         </div>
