--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
                                 <p class="explanation">Travail réalisé en groupe de 5 sur le sujet de la couleur et du textile. J'ai réalisé les couvertures, co-écrit les textes et ai réalisé une des illustrations. Imprimé à l'Ensaama.
                                  </p>
                         </div> 
+
+                        <div>
+                            <img src="editions/uglygirlsandboys_GIF.gif" height="420px">
+                                <p class="legende">"Ugly Girls and Boys" imprimé en laser, en noir sur noir</p>
+                                <p class="explanation">En collaboration avec <a href="https://www.instagram.com/grotesq3/" target="_blank" style="text-decoration:none"><span style="color:rgb(213, 36, 140);">@</span></a>grotesq3. Imprimé à l'Ensaama.
+                                 </p>
+                        </div> 
+                    
                      
                         <div class="endbox"> </div>
 
