imprimé AU laser

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                         <div>
                             <img src="editions/uglygirlsandboys_GIF.gif" height="420px">
-                                <p class="legende">"Ugly Girls and Boys" imprimé en laser, en noir sur noir</p>
+                                <p class="legende">"Ugly Girls and Boys" imprimé au laser, en noir sur noir</p>
                                 <p class="explanation">En collaboration avec <a href="https://www.instagram.com/grotesq3/" target="_blank" style="text-decoration:none"><span style="color:rgb(213, 36, 140);">@</span></a>grotesq3. Imprimé à l'Ensaama.
                                  </p>
                         </div> 
