--- a/conditions.html
+++ b/conditions.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Conditions d'utilisation des typographies de Kishin Inoue</h1>
 
-    <p style="font-family: sans-serif; font-size: 13px">En téléchargeant et en utilisant les typographies disponibles sur kishininoue.fr, vous acceptez les conditions d'utilisation suivantes :<br>
+    <p style="font-family: 'lucida blackletter', sans-serif; font-size: 13px">En téléchargeant et en utilisant les typographies disponibles sur kishininoue.fr, vous acceptez les conditions d'utilisation suivantes :<br>
         <br>
         <div id="texttext">
         <b>1. Usage autorisé</b><br>
