--- a/conditions.html
+++ b/conditions.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <h1>Conditions d'utilisation des typographies de Kishin Inoue</h1>
+    <h1 style="font-family: 'lucida blackletter', sans-serif;">Conditions d'utilisation des typographies de Kishin Inoue</h1>
 
     <p style="font-family: 'lucida blackletter', sans-serif; font-size: 13px">En téléchargeant et en utilisant les typographies disponibles sur kishininoue.fr, vous acceptez les conditions d'utilisation suivantes :<br>
         <br>
-        <div id="texttext">
+        <div id="texttext" style="font-family: 'lucida blackletter', sans-serif;">
         <b>1. Usage autorisé</b><br>
         <br>
         - Vous êtes autorisé à utiliser les typographies dans vos projets personnels et professionnels, y compris les créations numériques, imprimées, multimédias et autres.<br>
@@ -47,10 +47,10 @@
 
     <div style="transform: translate(660px,-450px); opacity: 80%;"> <img src="images1/fl0wr.png" height="570px"></div>
 
-    <div style="text-align: right; margin-right: 150px; transform: translate(0,-1020px); font-size: 14px;"><p>
+    <div style="text-align: right; margin-right: 150px; transform: translate(0,-1020px); font-size: 14px; font-family: 'lucida blackletter';"><p>
         Pour toute question, contacter l'auteur au kishin.inoue@ensaama.net. 
     </p></div>
 
-    <div style="margin-bottom: 70px; text-align: center;"><a href="index.html">go back to portfolio</a></a>
+    <div style="margin-bottom: 70px; text-align: center; font-family: 'lucida blackletter';"><a href="portfolio.html">go back to portfolio</a></a>
 </body>
-</html>
+</html> 
