--- a/index.html
+++ b/index.html
@@ -198,9 +198,12 @@
 
         <div id="videos" class="content-section"> 
             <p class="category">vidéos</p> 
-            <p id="explication">Les clips auquels j'ai pu participer</p>
+            <p id="explication">Les clips auxquels j'ai pu participer</p>
 
             <div class="videos">
+                <div class="youtube">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=JPM-TPdUq60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="legende">acteur principal, assistance, design graphique, auteur de la musique</p>
                 <div class="youtube">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cZXmOzmajhg?si=PWPDPax3TN-Hcp29" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="legende">acteur, assistance, guitare électrique</p>
