--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="youtube">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JPM-TPdUq60?si=1CnWnS8UKKZ1oSUJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="legende">acteur principal, assistance, design graphique, auteur de la musique</p>
-                <div class="youtube">
+                <hr class="barredevideo">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cZXmOzmajhg?si=PWPDPax3TN-Hcp29" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="legende">acteur, assistance, guitare électrique</p>
                 <hr class="barredevideo">
