--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <div><a href="to_download/Les Agaves.zip" download>
                         <p class="downloadfont" style="color: black;"><u>download font & specimen</u></p>
                        </a></div>
-                        <hr><div class="sample-text" id="textAgaves">Je cherche un stage !</div>
+                        <hr><div class="sample-text" id="textAgaves">kiki et bouba</div>
                     </div>
                 </div>
             
